// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignOwnProfileAction renders 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="assign-self"
        key="assign-self"
        onClick={[Function]}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title={null}
        >
          <p>
            This is my paper
          </p>
        </Tooltip>
      </MenuItem>
    </EventTracker>
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is not my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="unassign"
        key="unassign"
        onClick={[Function]}
      >
        This is not my paper
      </MenuItem>
    </EventTracker>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignOwnProfileAction renders disabled 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={true}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Please select the papers you want to claim or remove from the profile."
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="assign-self"
        disabled={true}
        key="assign-self"
        onClick={[Function]}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="This paper is already claimed"
        >
          <p>
            This is my paper
          </p>
        </Tooltip>
      </MenuItem>
    </EventTracker>
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is not my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="unassign"
        key="unassign"
        onClick={[Function]}
      >
        This is not my paper
      </MenuItem>
    </EventTracker>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignOwnProfileAction renders plural form if numberOfSelected is more than 1 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="assign-self"
        key="assign-self"
        onClick={[Function]}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title={null}
        >
          <p>
            These are my papers
          </p>
        </Tooltip>
      </MenuItem>
    </EventTracker>
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is not my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="unassign"
        key="unassign"
        onClick={[Function]}
      >
        These are not my papers
      </MenuItem>
    </EventTracker>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignOwnProfileAction renders singular form if numberOfSelected is 1 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="assign-self"
        key="assign-self"
        onClick={[Function]}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title={null}
        >
          <p>
            This is my paper
          </p>
        </Tooltip>
      </MenuItem>
    </EventTracker>
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is not my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="unassign"
        key="unassign"
        onClick={[Function]}
      >
        This is not my paper
      </MenuItem>
    </EventTracker>
  </DropdownMenu>
</UserActionWrapper>
`;

exports[`AssignOwnProfileAction renders with disabled assign action 1`] = `
<UserActionWrapper>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="assign-self"
        disabled={true}
        key="assign-self"
        onClick={[Function]}
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="top"
          title="This paper is already claimed"
        >
          <p>
            This is my paper
          </p>
        </Tooltip>
      </MenuItem>
    </EventTracker>
    <EventTracker
      eventAction="Claim"
      eventCategory="Author detail"
      eventId="This is not my paper"
      eventPropName="onClick"
      extractEventArgsToForward={null}
    >
      <MenuItem
        data-test-id="unassign"
        key="unassign"
        onClick={[Function]}
      >
        This is not my paper
      </MenuItem>
    </EventTracker>
  </DropdownMenu>
</UserActionWrapper>
`;
